<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="authentication_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>

    <!-- Toolbar Strings -->
    <string name="toolbar_search_title">Search</string>
    <string name="toolbar_map_title">I\'m Hungry!</string>
    <string name="toolbar_workmates_title">Available workmates</string>

    <!-- NavigationDrawer Strings -->
    <string name="header_username"><B>Username</B></string>
    <string name="header_usermail">Usermail</string>
    <string name="drawer_your_lunch">YOUR LUNCH</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_logout">LOGOUT</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- BottomNavigation Strings -->
    <string name="bottom_map_view">Map View</string>
    <string name="bottom_list_view">List View</string>
    <string name="bottom_workmates">Workmates</string>
    <string name="title_activity_maps">Map</string>

    <!-- Authentication Strings -->
    <string name="authentication_button_mail">Sign in with Email</string>
    <string name="authentication_button_facebook">Sign in with Facebook</string>
    <string name="authentication_button_google">Sign in with Google</string>
    <string name="authentication_button_twitter">Sign in with Twitter</string>

    <string name="authentication_error_no_internet">Error: no internet</string>
    <string name="authentication_error_unknown_error">Error: unknown error</string>
    <string name="authentication_error_authentication_canceled">Error: authentication canceled</string>
    <string name="authentication_connection_succeed">Connection succeed</string>

    <!-- SettingsActivity Strings -->
    <string name="settings_message">Enable/Disable notifications</string>

    <!-- WorkmateView Strings -->
    <string name="workmate_view_undecided">hasn\'t decided yet</string>
    <string name="workmate_view_decided">is eating at</string>
    <string name="workmate_view_restaurantactivity">is joining!</string>

    <!-- RestaurantView Strings -->
    <string name="restaurant_view_name"><b>Name</b></string>
    <string name="restaurant_view_address">Address</string>
    <string name="restaurant_view_distance">Distance</string>
    <string name="restaurant_view_opening_times">open/close</string>
    <string name="restaurant_view_stars">stars</string>
    <string name="restaurant_view_workmates">workmates</string>


    <!-- Marker Strings -->
    <string name="marker_me">Me</string>

    <!-- RestaurantActivity Strings -->
    <string name="restaurant_activity_button_call_text"><b>CALL</b></string>
    <string name="restaurant_activity_button_like_text"><b>LIKE</b></string>
    <string name="restaurant_activity_button_website_text"><b>WEBSITE</b></string>

    <string name="restaurant_activity_restaurant_name">Restaurant</string>
    <string name="restaurant_activity_restaurant_address">Address</string>

    <!-- Notification Strings -->
    <string name="notification_title">Your lunch!</string>
    <string name="default_notification_channel_id">Test</string>


    <!-- Alertdialog Strings -->
    <string name="alertdialog_error">Error</string>
    <string name="alertdialog_your_lunch">Your current lunch!</string>
    <string name="alertdialog_content_no_website_error">Sorry, it looks like this Restaurant has no website yet! :(</string>
    <string name="alertdialog_button_neutral">OK</string>


    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">227616504691090</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb227616504691090</string>

    <!-- TWITTER PURPOSE -->
    <string name="twitter_consumer_key" translatable="false">fkhXvA39uBfOl1UAk3lx1xO0p</string>
    <string name="twitter_consumer_secret" translatable="false">Iwu5b38KJJVCthxOOd2LdURTVMK0ItFYZBFWfAPtHJhnzzv3x5</string>

</resources>
