<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/restaurant_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@+id/restaurant_view_opening_times"
        android:text="@string/restaurant_view_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_view_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/restaurant_view_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurant_view_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_view_name" />

    <TextView
        android:id="@+id/restaurant_view_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restaurant_view_address"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurant_view_distance"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurant_view_opening_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/restaurant_view_workmates"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurant_view_opening_times"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_view_address" />

    <ImageView
        android:id="@+id/restaurant_view_stars"
        android:text="@string/restaurant_view_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/restaurant_view_workmates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurant_view_workmates"
        app:layout_constraintStart_toEndOf="@+id/restaurant_view_address"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_view_distance" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/restaurant_view_name"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>