<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/go4lunch_background"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:background="@color/g4lOrange"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_activity_restaurant_name"
            />

        <TextView
            android:id="@+id/activity_restaurant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_activity_restaurant_address"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="15"
        android:weightSum="3">

        <Button
            android:id="@+id/activity_restaurant_button_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_activity_button_call_text"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/fui_ic_phone_white_24dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/activity_restaurant_button_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_activity_button_like_text"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_star_rate_white_24"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/activity_restaurant_button_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_activity_button_website_text"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/baseline_public_white_24"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"></LinearLayout>

</LinearLayout>