<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_header_height"
    android:background="@drawable/go4lunch_background"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="2"
    >

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

         <TextView
             android:id="@+id/header_app_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:gravity="center_horizontal"
             android:layout_gravity="center_vertical"
             android:textSize="@dimen/navigation_header_title_text_size"
             android:textColor="@color/g4lWhite"
         />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/header_user_picture"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/navigation_header_user_picture_width"
                android:layout_height="@dimen/navigation_header_user_picture_height" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_user_name"
                android:textSize="@dimen/navigation_header_user_name_text_size"
                android:textColor="@color/g4lWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_username"/>

            <TextView
                android:id="@+id/header_user_mail"
                android:textSize="@dimen/navigation_header_user_name_mail_size"
                android:textColor="@color/g4lWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_usermail" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>